AWS-Study-Terraform/vpc.tf
# VPCの作成
resource "aws_vpc" "aws-study-vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "aws-study-vpc"
  }
}
