AWS-Study-Terraform/sg.tf
resource "aws_security_group" "sg-ec2" {
  name        = "aws-study-sg-ec2"
  description = "Security group for AWS Study Terraform project"
  vpc_id      = aws_vpc.aws-study-vpc.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["219.59.48.242/32"]
  }

  ingress {
    description = "App port"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "All outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "aws-study-sg-ec2"
  }
}

resource "aws_security_group" "sg-rds" {
  name        = "aws-study-sg-rds"
  description = "Security group for RDS instance"
  vpc_id      = aws_vpc.aws-study-vpc.id

  ingress {
    description     = "PostgreSQL"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.sg-ec2.id]
  }

  egress {
    description = "All outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "aws-study-sg-rds"
  }
}
